# CoolClean

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
CoolClean/: asgi.py  mixin.py  settings.py  urls.py  views.py  wsgi.py
CoolClean/fridges/: apps.py  forms.py  models.py  urls.py  views.py
CoolClean/fridges/migrations/: 0001_initial.py  0002_alter_fridge_price_fridgeimage.py  0003_fridge_chamber_count_fridge_color_and_more.py  0004_alter_fridge_defrosting_type_and_more.py  0005_alter_fridge_defrosting_type_and_more.py  0006_alter_fridge_defrosting_type.py  0007_fridge_brand.py  0008_alter_fridge_color_alter_fridge_description_and_more.py  0009_alter_fridge_name.py  0010_fridge_engine_alter_fridge_description.py
CoolClean/goods_sold/: apps.py  urls.py
CoolClean/templates/: base.html  create_form.html  delete_product.html  header_menu.html  index.html  new_position.html  product_list.html
CoolClean/templates/fridges/: detail_fridge.html
CoolClean/templates/washers/: detail_washer.html
CoolClean/washers/: apps.py  forms.py  models.py  urls.py  views.py
CoolClean/washers/migrations/: 0001_initial.py
