[tool.poetry]
name = "cool-clean"
version = "0.1.0"
description = ""
authors = ["Gaevskii.V <gaevskii.v95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
python-dotenv = "^1.0.1"
django-bootstrap5 = "^24.3"
pillow = "^11.0.0"
django-widget-tweaks = "^1.5.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
